@@ -24,6 +24,7 @@
     "prereqs" : {
         "runtime" : {
             "requires" : {
+                "perl": "5.006",
                 "Carp": "0",
                 "Class::Accessor::Fast": "0",
                 "DBI": "0"
@@ -31,11 +32,12 @@
         },
         "test" : {
             "requires": {
+                "IO::File": "0",
                 "Test::More": "0.70"
             },
             "recommends": {
-                "Test::CPAN::Meta": "0.13",
-                "Test::CPAN::Meta::JSON": "0.12",
+                "Test::CPAN::Meta": "0",
+                "Test::CPAN::Meta::JSON": "0",
                 "Test::Pod": "1.00",
                 "Test::Pod::Coverage": "0.08"
             }
