@@ -10,17 +10,18 @@ distribution_type:   module
 installdirs:         site
 
 requires:
-  Carp:                     0
-  Class::Accessor::Fast:    0
-  DBI:                      0
+  perl:                   5.006
+  Carp:                   0
+  Class::Accessor::Fast:  0
+  DBI:                    0
 recommends:
-  Test::More:               0.70
-  Test::Pod:                1.00
-  Test::Pod::Coverage:      0.08
-  Test::CPAN::Meta:         0.13
-  Test::CPAN::Meta::JSON:   0.12
+  Test::CPAN::Meta:       0
+  Test::CPAN::Meta::JSON: 0
+  Test::Pod:              1.00
+  Test::Pod::Coverage:    0.08
 build_requires:
-  Test::More:               0.70
+  IO::File:               0
+  Test::More:             0.70
 
 provides:
   CPAN::Testers::Common::DBUtils:
