@@ -48,7 +48,7 @@ AUTHOR
 
 COPYRIGHT AND LICENCE
 
-  Copyright (C) 2005-2008 Barbie for Miss Barbell Productions
+  Copyright (C) 2005-2012 Barbie for Miss Barbell Productions
 
-  This package is free software; you can redistribute it and/or 
-  modify it under the same terms as Perl itself.
+  This module is free software; you can redistribute it and/or
+  modify it under the Artistic Licence v2.
